Amélioration UI/UX
Amélioration UI/UX

--- a/index.html
+++ b/index.html
@@ -511,12 +511,12 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
         <ol reversed></ol>
     </section>
     <section id="tab-telechargements" class="tabs-content-item" style="display: none;"> <!-- Section : À propos -->
-        <p>Maths et Matic Projector est gratuit est open-source, le projet est un fork de Maths MathsMentales</p>
+        <h3>Maths et Matic Projector est gratuit est open-source, le projet est un fork de Maths MathsMentales</h3>
         <h2 class="sg-title">Code source de Maths et Matic Projector</h2>
         <p>Le code source du projet est sous licence Apache 2.0 : <a href="https://github.com/Vapps-Line-std/mem-projector">https://github.com/Vapps-Line-std/mem-projector</a></p>
         <h2 class="sg-title">Code source de MathsMentales</h2>
         <p>Maths et Matic Projector est un fork de MathsMentales : <a href="https://github.com/seb-cogez/mathsmentales">https://github.com/seb-cogez/mathsmentales</a></p>
-        <p></p>
+        <br>
         <p>Tous les documents ci-dessous sont sous licence libre GPL</p>
         <h2 class="sg-title">Documentation de MathsMentales</h2>
         <p>En attendant des tutos en vidéo, voici une courte documentation de MathsMentales : <a href="docs/MathsMentales documentation.pdf" target="_blank">Télécharger le pdf</a></p>
