Amélioration UI/UX
Amélioration UI/UX

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
             <fieldset><legend>Clé de données</legend>
                 <input type="checkbox" id="aleaInURL" value="1" class="switch" title="Prendre en compte dans l'adresse"> inclure
                 <input type="text" placeholder="eHDtp" id="aleaKey" size="6">
-                <img src="img/iconfinder_die_32px.png" onclick="document.getElementById('aleaKey').value=utils.seedGenerator();" class="pointer">
+                <button onclick="document.getElementById('aleaKey').value=utils.seedGenerator();" class="pointer button-cle-data"><h1><i class="bi bi-dice-3"></i></h1></button><!--<img src="img/iconfinder_die_32px.png">-->
             </fieldset>
             <div id="paramsdiapo">
             <fieldset>
