--- a/index.html
+++ b/index.html
@@ -518,8 +518,8 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
         <p>Maths et Matic Projector est un fork de MathsMentales : <a href="https://github.com/seb-cogez/mathsmentales">https://github.com/seb-cogez/mathsmentales</a></p>
         <br>
         <p>Tous les documents ci-dessous sont sous licence libre GPL</p>
-        <h2 class="sg-title">Documentation de MathsMentales</h2>
-        <p>En attendant des tutos en vidéo, voici une courte documentation de MathsMentales : <a href="docs/MathsMentales documentation.pdf" target="_blank">Télécharger le pdf</a></p>
+        <h2 class="sg-title">Documentation de Maths et Matic Projector</h2>
+        <p>Documentation de Maths et Matic Projector : <a href="docs/Mem-Doc.pdf" target="_blank">Télécharger le pdf</a></p>
         <h3 class="h3-about">2021 <a href="https://vappsline.jimdofree.com">Vapps Line std</a></h3>
     </section>
     <section id="tab-chercher" class="tabs-content-item" style="display: none;"> <!-- Section : Recherche -->
