--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script src="js/libs/kas.min.js" defer></script>
     <script src="js/MM1toMM2.min.js" defer></script>
     <script src="js/libs/vanilla-picker/vanilla-picker.min.js" defer></script>
-    <script src="js/lib.mathsmentales.js?v=29" type="text/javascript" defer></script>
+    <script src="js/lib.mathsmentales.js?v=30" type="text/javascript" id="mmscriptid" defer></script>
 </head>
 <body>
     <div id="app-container">
