--- a/exercices.html
+++ b/exercices.html
@@ -8,7 +8,7 @@
                 margin:0.8cm;
             }
         </style>
-        <title>Fiche d'exercices MathsMentales</title>
+        <title>Fiche d'exercices Maths et Matic Projector</title>
         <link rel="stylesheet" href="css/exercices.css?v=5" type="text/css" />
         <link href="js/libs/katex/katex.min.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="js/libs/JSXGraph1.4.0/jsxgraph.css" type="text/css" />
@@ -22,14 +22,14 @@
         <script src="js/libs/chartjs/Chart.bundle.min.js" defer></script>
 
         <script type="module" src="js/lib.exercices.js"></script>
-    </head>  
+    </head>
     <body size="A4">
         <button onclick="document.getElementById('creator-menu').classList.toggle('hidden')" class="noprint" style="position: absolute;left:0;top:0;width:18pt;height:18pt;">🛠</button>
         <div id="creator-container">
             <section id="creator-menu" class="noprint hidden">
                 <button id="pageOrientation" title="Change l'orientation de la page">paysage</button>
                 <button onclick="window.print();" title="Cliquer pour imprimer ou enregistrer en pdf">Print</button>
-                | Énoncés : 
+                | Énoncés :
                 <input type="number" min="1" id="nbFiches" size="3">
                 <button id="fichesSeparation" title="Regrouper ou Séparer les fiches d'exercices">Séparer</button>
                 | Corrigé :
@@ -39,7 +39,7 @@
             </section>
             <section id="tab-accueil" class="noprint"></section>
             <section id="creator-content">
-            
+
             </section>
             </div>
     </body>
