Message d'avertissement temporaire
Message d'avertissement temporaire

--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
               </div>
             </div>
             <img alt="logo" src="https://image.jimcdn.com/app/cms/image/transf/dimension=320x10000:format=png/path/sef6091d0cde7bfc1/image/iacfaba7d247d2f62/version/1612443176/image.png" width="160" class="logoMM">
+<h3 class="h3-about"><b>⚠️ Attention : </b>À la suite d'un changement d'infrastructure du code, le site Maths et Matic Projector est cassé, l'équipe Vapps Line std est mobilisé pour corriger le code dans les meilleurs délais, pour suivre l'évolution de la situation, suivez notre compte <a href="https://twitter.com/Vls_officiel">Twitter</a>
+<br>Merci de votre compréhension
+</h3>
             <p>
                 <b>Maths et Matic Projector</b> votre plateforme de calcul mentales en classe
              </p>
