Début de correction

--- a/index.html
+++ b/index.html
@@ -302,20 +302,20 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                 <input type="radio" class="radio" name="endOfSlideRadio" value="list"id="radioendslider3"> Énoncés
             </fieldset><br>
             <section class="txtcenter" id="startbuttons">
-                <button class="button--primary tooltip" id="btnstart">C'est parti !
+                <button class="button--primary tooltip" id="btnstart"><b>Démmarer</b>
                     <span class="tooltiptext">Démarre le diaporama</span>
                 </button>
-                <button class="button--info tooltip" id="btnenonces">Énoncés
+                <button class="button--info tooltip" id="btnenonces">Passer aux énoncés
                     <span class="tooltiptext">Affiche directement<br>les énoncés</span>
                 </button>
-                <button class="button--warning tooltip" id="btnreponses">Réponses
+                <button class="button--warning tooltip" id="btnreponses">Passer aux réponses
                     <span class="tooltiptext">Affiche directement<br>les réponses</span>
                 </button> <br>
-                <button class="button--inverse tooltip" id="btnadresse">Adresse/QRCode
+                <button class="button--inverse tooltip" id="btnadresse">Générer le lien
                 <span class="tooltiptext">Copie l'adresse de<br>l'activité dans<br>le presse papier</span>
                 </button>
                 <input type="text" class="hidden" id="acturl" maxlength="1024">
-                <button class="button--success tooltip" id="btncopytohistoric">→ Historique
+                <button class="button--success tooltip" id="btncopytohistoric">Ajouter à l'historique
                 <span class="tooltiptext">Copie la sélection<br>dans l'historique</span>
                     <script>
                         function ShowPUHIST(){
