--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
             <div class="tabs">
                 <nav class="tabs-menu" id="cartsMenu">
                     <button class="tabs-menu-link is-active" value="1" id="button-cart1"><img src="img/cart1.png"></button>
-                    <button id="addcart" title="Ajouter un panier"><i class="bi bi-cart-plus"></h1></i><!--<img src="img/cartadd.png">--></button>
+                    <button id="addcart" title="Ajouter un panier"><img src="img/cartadd.png"></button>
                 </nav>
             </div>
             <div id="cartscontainer">
                 <section id="cart0" class="cartcontent">
-                    <button id="btncartclose1" class="cart-close" title="Vider le panier"><h1 id="button-type" class="cart-bs-icon"><i class="bi bi-cart-dash"></i></h1></i><!--<img src="img/recyclecart.png">--></button>
+                    <button id="btncartclose1" class="cart-close" title="Vider le panier"><h1 id="button-type" class="cart-bs-icon"><i class="bi bi-cart-dash"></i></h1></i><span class="etat-cache"><img src="img/recyclecart.png"></span></button>
                     <h3 contenteditable="true" title="Cliquer pour éditer" id="titlecart1">Groupe 1</h3>
                     <div class="totaux">
                         <img src="img/clock.png" title="Durée totale"> <span>0</span> s.
@@ -194,8 +194,8 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                     </ul>
                 </section>
                 <section id="cart1" class="hidden">
-                    <button class="cart-close" id="btncartdelete2" title="Supprimer le panier"><h1 id="button-type" class="cart-bs-icon"><i class="bi bi-cart-x-fill"></i></h1><!--<img src="img/burnCart.png">--></button>
-                    <button class="cart-close" id="btncartclose2" title="Vider le panier"><h1 id="button-type" class="cart-bs-icon"><i class="bi bi-cart-dash"></i></h1><!--<img src="img/recyclecart.png">--></button>
+                    <button class="cart-close" id="btncartdelete2" title="Supprimer le panier"><h1 id="button-type" class="cart-bs-icon"><i class="bi bi-cart-x-fill"></i></h1><span class="etat-cache"><img src="img/burnCart.png"></span></button>
+                    <button class="cart-close" id="btncartclose2" title="Vider le panier"><h1 id="button-type" class="cart-bs-icon"><i class="bi bi-cart-dash"></i></h1><span class="etat-cache"><img src="img/recyclecart.png"></span></button>
                     <h3 contenteditable="true" title="Cliquer pour éditer" id="titlecart2">Groupe 2</h3>
                     <div class="totaux">
                         <img src="img/clock.png" title="Durée totale"> <span>0</span> s.
@@ -208,8 +208,8 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                     </ul>
                 </section>
                 <section id="cart2" class="hidden">
-                    <button class="cart-close" id="btncartdelete3" title="Supprimer le panier"><h1 id="button-type" class="cart-bs-icon"><i class="bi bi-cart-x-fill"></i></h1><!--<img src="img/burnCart.png">--></button>
-                    <button class="cart-close" id="btncartclose3" title="Vider le panier"><h1 id="button-type" class="cart-bs-icon"><i class="bi bi-cart-dash"></i></h1><!--<img src="img/recyclecart.png">--></button>
+                    <button class="cart-close" id="btncartdelete3" title="Supprimer le panier"><h1 id="button-type" class="cart-bs-icon"><i class="bi bi-cart-x-fill"></i></h1><span class="etat-cache"><img src="img/burnCart.png"></span></button>
+                    <button class="cart-close" id="btncartclose3" title="Vider le panier"><h1 id="button-type" class="cart-bs-icon"><i class="bi bi-cart-dash"></i></h1><span class="etat-cache"><img src="img/recyclecart.png"></span></button>
                     <h3 contenteditable="true" id="titlecart3" title="Cliquer pour éditer">Groupe 3</h3>
                     <div class="totaux">
                         <img src="img/clock.png" title="Durée totale"> <span>0</span> s.
@@ -222,8 +222,8 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                     </ul>
                 </section>
                 <section id="cart3" class="hidden">
-                    <button class="cart-close" id="btncartdelete4" title="Supprimer le panier"><h1 class="cart-bs-icon"><i id="button-type" class="bi bi-cart-x-fill"></i></h1><!--<img src="img/burnCart.png">--></button>
-                    <button class="cart-close" id="btncartclose4" title="Vider le panier"><i id="button-type" class="bi bi-cart-dash"></i></h1><!--<img src="img/recyclecart.png">--></button>
+                    <button class="cart-close" id="btncartdelete4" title="Supprimer le panier"><h1 class="cart-bs-icon"><i id="button-type" class="bi bi-cart-x-fill"></i></h1><span class="etat-cache"><img src="img/burnCart.png"></span></button>
+                    <button class="cart-close" id="btncartclose4" title="Vider le panier"><i id="button-type" class="bi bi-cart-dash"></i></h1><span class="etat-cache"><img src="img/recyclecart.png"></span></button>
                     <h3 contenteditable="true" id="titlecart4" title="Cliquer pour éditer">Groupe 4</h3>
                     <div class="totaux">
                         <img src="img/clock.png" title="Durée totale"> <span>0</span> s.
