--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                 <span class="tooltiptext">Copie l'adresse de<br>l'activité dans<br>le presse papier</span>
                 </button>
                 <input type="text" class="hidden" id="acturl" maxlength="1024">
-                <button class="button--success tooltip" id="btncopytohistoric">Ajouter à l'historique
+                <button class="button--success tooltip" onclick="ShowPUHIST()" id="btncopytohistoric">Ajouter à l'historique
                 <span class="tooltiptext">Copie la sélection<br>dans l'historique</span>
                     <script>
                         function ShowPUHIST(){
