--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
     <section id="tab-parameters" class="grid-3 has-gutter tabs-content-item" style="display: none;"> <!-- Section : Configuration -->
         <div>
             <button id="addToCart" title="Ajouter au panier"><h1><i class="bi bi-bag-plus-fill"></i></h1><!--<img src="img/addtocart.png">--></button>
-            <button id="unlinkCart" class="hidden" title="Désolidariser l'édition du panier"><h1><i class="bi bi-x-circle-fill"></i></h1><!--<img src="img/iconfinder_pin.png">--></button>
+            <button id="unlinkCart" class="hidden" title="Annualer la sélection"><h1><i class="bi bi-x-circle-fill"></i></h1><!--<img src="img/iconfinder_pin.png">--></button>
             <button id="removeFromCart" class="hidden" title="Supprimer du panier"><h1><i class="bi bi-bag-dash-fill"></i></h1><!--<img src="img/removefromcart.png">--></button>
             <h1><i class="icon-arrow--right"></i>Activité <span id="param-title-act"></span></h1>
             <div id="activityTitle"></div>
@@ -481,7 +481,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
         </div>
        <div class="row-4 colsx2" id="divparams">
         <button id="btn-annotation2">
-            <h1><i class="bi bi-pencil-fill"></i></h1><span style="display: none;"><img src="img/iconfinder_pencil_1055013.png" title="Annoter l'énoncé"></span>
+            <img src="img/iconfinder_pencil_1055013.png" title="Annoter l'énoncé">
         </button>
         <button id="btn-shuffle">
             <!--<img src="img/iconfinder_die_1055072.png" title="Changer les exemples">--> <h1><i class="bi bi-dice-3"></i></h1>
@@ -493,7 +493,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
     <section id="tab-enonce" class="tabs-content-item" style="display: none;"> <!-- Section : Enoncé -->
         <aside>
             <button id="btn-annotation-enonce">
-                <h1><i class="bi bi-pencil-fill"></i></h1><span style="display: none;"><img src="img/iconfinder_pencil_1055013.png" title="Annoter"></span>
+                <span style="display: none;"><img src="img/iconfinder_pencil_1055013.png" title="Annoter">
             </button>
         </aside>
         <div id="enonce-content" class="grid">
@@ -503,13 +503,13 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
     <section id="tab-corrige" class="tabs-content-item" style="display: none;">
         <aside>
             <button id="btn-annotation-corrige">
-                <h1><i class="bi bi-pencil-fill"></i></h1><span style="display: none;"><img src="img/iconfinder_pencil_1055013.png" title="Annoter le corrigé"></span>
+                <img src="img/iconfinder_pencil_1055013.png" title="Annoter le corrigé">
             </button>
             <button id="btn-restart-otherdata">
-                <h1><i class="bi bi-arrow-clockwise"></i><i class="bi bi-dice-3"></i></h1><!--<img src="img/restart.png" title="Recommencer avec de nouvelles données">-->
+                <img src="img/restart.png" title="Recommencer avec de nouvelles données">
             </button>
             <button id="btn-restart-samedata">
-                <h1><i class="bi bi-arrow-clockwise"></i></h1><!--<img src="img/restartsame.png" title="Recommencer avec les mêmes données">-->
+                <img src="img/restartsame.png" title="Recommencer avec les mêmes données">
             </button>
         </aside>
         <div id="corrige-content" class="grid">
@@ -552,7 +552,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
 <div id="slideshow-container" class="hidden">
     <header>
         <button title="Tout arrêter" id="stop-all"><h1><i class="bi bi-stop-btn-fill"></i></h1><!--<img alt="Stop" src="img/slider-stop.png">--></button>
-        <button title="Tout mettre en pause" id="pause-all"><h1><i class="bi bi-pause-btn-fill"></i></h1><span style="display: none;"><img alt="Pause" src="img/slider-pause.png"></button>
+        <button title="Tout mettre en pause" id="pause-all"><h1><i class="bi bi-pause-btn-fill"></i></h1><span style="display: none;"><img alt="Pause" src="img/slider-pause.png"></span></button>
         <button title="Passer à la suivante pour tous" id="next-all"><h1><i class="bi bi-skip-end-btn-fill"></i></h1><!--<img alt="Next" src="img/slider-next.png">--></button>
     </header>
     <section id="slideshow"></section>
