--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
         <section class="grille">
         <article class="accueillogo">
           <!-- Action JavaScript MM.takeOff()-->
-            <div class="fr jaiuncode"><input type="text" id="inputCode" placeholder="Saisir une URL préconfigurée" syle="width: 100%;"><button title="Saisir une URL ou un code" id="btnCode" onclick="URLPreconfig()"><!--<img src="img/iconfinder_takeoff.png" alt="Saisir une URL ou un code"> --><h1><i class="bi bi-check-circle-fill"></i></h1></button>
+            <div class="fr jaiuncode"><input type="text" id="inputCode" placeholder="Saisir une URL préconfigurée" style="width: 100%;"><button title="Saisir une URL ou un code" id="btnCode" onclick="URLPreconfig()"><!--<img src="img/iconfinder_takeoff.png" alt="Saisir une URL ou un code"> --><h1><i class="bi bi-check-circle-fill"></i></h1></button>
               <script>
               function URLPreconfig() {
                 var URLCode = document.getElementById("inputCode").value;
@@ -223,7 +223,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                 </section>
                 <section id="cart3" class="hidden">
                     <button class="cart-close" id="btncartdelete4" title="Supprimer le panier"><h1 class="cart-bs-icon"><i id="button-type" class="bi bi-cart-x-fill"></i></h1><span class="etat-cache"><img src="img/burnCart.png"></span></button>
-                    <button class="cart-close" id="btncartclose4" title="Vider le panier"><i id="button-type" class="bi bi-cart-dash"></i></h1><span class="etat-cache"><img src="img/recyclecart.png"></span></button>
+                    <button class="cart-close" id="btncartclose4" title="Vider le panier"><h1 class="cart-bs-icon"><i id="button-type" class="bi bi-cart-dash"></i></h1><span class="etat-cache"><img src="img/recyclecart.png"></span></button>
                     <h3 contenteditable="true" id="titlecart4" title="Cliquer pour éditer">Groupe 4</h3>
                     <div class="totaux">
                         <img src="img/clock.png" title="Durée totale"> <span>0</span> s.
@@ -493,7 +493,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
     <section id="tab-enonce" class="tabs-content-item" style="display: none;"> <!-- Section : Enoncé -->
         <aside>
             <button id="btn-annotation-enonce">
-                <span style="display: none;"><img src="img/iconfinder_pencil_1055013.png" title="Annoter">
+                <i ></i><img src="img/iconfinder_pencil_1055013.png" title="Annoter">
             </button>
         </aside>
         <div id="enonce-content" class="grid">
