--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                     <button class="cart-close" id="btncartclose2" title="Vider le panier"><h1 id="button-type" class="cart-bs-icon"><i class="bi bi-cart-dash"></i></h1><span class="etat-cache"><img src="img/recyclecart.png"></span></button>
                     <h3 contenteditable="true" title="Cliquer pour éditer" id="titlecart2">Groupe 2</h3>
                     <div class="totaux">
-                        <img src="img/clock.png" title="Durée totale"> <span>0</span> s.
-                        <img src="img/docs.png" title="Nombre total de questions"> <span>0</span> quest.
-                        <img src="img/target.png" title="Zone d'énoncé"> <span>2</span>
-                        <img src="img/iconfinder_stack_1054970.png" data-ordered="true" title="Affichage dans l'ordre des activités" class="pointer" id="imgordercart2">
-                        <img src="img/iconfinder_copy.png" class="pointer" title="Dupliquer le panier" id="imgduplicatecart2">
+                        <img class="carre-32" src="bootstrap-icons/icons/hourglass-split.svg" title="Durée totale"> <span>0</span> s.
+                        <img class="carre-32" src="bootstrap-icons/icons/bar-chart-line-fill.svg" title="Nombre total de questions"> <span>0</span> quest.
+                        <img class="carre-32" src="bootstrap-icons/icons/aspect-ratio-fill.svg" title="Zone d'énoncé"> <span>2</span>
+                        <img class="carre-32" src="bootstrap-icons/icons/layers-half.svg" data-ordered="true" title="Affichage dans l'ordre des activités" class="pointer" id="imgordercart2">
+                        <img class="carre-32" src="bootstrap-icons/icons/clipboard-plus.svg" class="pointer" title="Dupliquer le panier" id="imgduplicatecart2">
                     </div>
                     <ul id="cart1-list" class="cart-list">
                     </ul>
@@ -212,11 +212,11 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                     <button class="cart-close" id="btncartclose3" title="Vider le panier"><h1 id="button-type" class="cart-bs-icon"><i class="bi bi-cart-dash"></i></h1><span class="etat-cache"><img src="img/recyclecart.png"></span></button>
                     <h3 contenteditable="true" id="titlecart3" title="Cliquer pour éditer">Groupe 3</h3>
                     <div class="totaux">
-                        <img src="img/clock.png" title="Durée totale"> <span>0</span> s.
-                        <img src="img/docs.png" title="Nombre total de questions"> <span>0</span> quest.
-                        <img src="img/target.png" title="Zone d'énoncé"> <span>3</span>
-                        <img src="img/iconfinder_stack_1054970.png" data-ordered="true" title="Affichage dans l'ordre des activités" class="pointer" id="imgordercart3">
-                        <img src="img/iconfinder_copy.png" class="pointer" title="Dupliquer le panier" id="imgduplicatecart3">
+                        <img class="carre-32" src="bootstrap-icons/icons/hourglass-split.svg"" title="Durée totale"> <span>0</span> s.
+                        <img class="carre-32" src="bootstrap-icons/icons/bar-chart-line-fill.svg" title="Nombre total de questions"> <span>0</span> quest.
+                        <img class="carre-32" src="bootstrap-icons/icons/aspect-ratio-fill.svg" title="Zone d'énoncé"> <span>3</span>
+                        <img class="carre-32" src="bootstrap-icons/icons/layers-half.svg" data-ordered="true" title="Affichage dans l'ordre des activités" class="pointer" id="imgordercart3">
+                        <img class="carre-32" src="bootstrap-icons/icons/clipboard-plus.svg" class="pointer" title="Dupliquer le panier" id="imgduplicatecart3">
                     </div>
                     <ul id="cart2-list" class="cart-list">
                     </ul>
@@ -226,10 +226,10 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
                     <button class="cart-close" id="btncartclose4" title="Vider le panier"><h1 class="cart-bs-icon"><i id="button-type" class="bi bi-cart-dash"></i></h1><span class="etat-cache"><img src="img/recyclecart.png"></span></button>
                     <h3 contenteditable="true" id="titlecart4" title="Cliquer pour éditer">Groupe 4</h3>
                     <div class="totaux">
-                        <img src="img/clock.png" title="Durée totale"> <span>0</span> s.
-                        <img src="img/docs.png" title="Nombre total de questions"> <span>0</span> quest.
-                        <img src="img/target.png" title="Zone d'énoncé"> <span>4</span>
-                        <img src="img/iconfinder_stack_1054970.png" data-ordered="true" title="Affichage dans l'ordre des activités" class="pointer"  id="imgordercart4">
+                        <img class="carre-32" src="bootstrap-icons/icons/hourglass-split.svg" title="Durée totale"> <span>0</span> s.
+                        <img class="carre-32" src="bootstrap-icons/icons/bar-chart-line-fill.svg" title="Nombre total de questions"> <span>0</span> quest.
+                        <img class="carre-32" src="bootstrap-icons/icons/aspect-ratio-fill.svg" title="Zone d'énoncé"> <span>4</span>
+                        <img class="carre-32" src="bootstrap-icons/icons/layers-half.svg" data-ordered="true" title="Affichage dans l'ordre des activités" class="pointer"  id="imgordercart4">
                     </div>
                     <ul id="cart3-list" class="cart-list">
                     </ul>
@@ -252,7 +252,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
             <fieldset><legend>Clé de données</legend>
                 <input type="checkbox" id="aleaInURL" value="1" class="switch" title="Prendre en compte dans l'adresse"> inclure
                 <input type="text" placeholder="eHDtp" id="aleaKey" size="6">
-                <img src="img/iconfinder_die_32px.png" class="pointer" id="btn-params-aleakey">
+                <img class="carre-32" src="bootstrap-icons/icons/dice-3.svg" class="pointer" id="btn-params-aleakey">
             </fieldset>
             <div id="paramsdiapo">
             <fieldset>
@@ -493,7 +493,7 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
     <section id="tab-enonce" class="tabs-content-item" style="display: none;"> <!-- Section : Enoncé -->
         <aside>
             <button id="btn-annotation-enonce">
-                <i ></i><img src="img/iconfinder_pencil_1055013.png" title="Annoter">
+                <img src="img/iconfinder_pencil_1055013.png" title="Annoter">
             </button>
         </aside>
         <div id="enonce-content" class="grid">
