Annonce "Bugs (provoqué par un changement d'infra) corrigés"

--- a/index.html
+++ b/index.html
@@ -134,9 +134,20 @@ Le projet est forké depuis MathsMentales (https://github.com/seb-cogez/mathsmen
               </div>
             </div>
             <img alt="logo" src="https://image.jimcdn.com/app/cms/image/transf/dimension=320x10000:format=png/path/sef6091d0cde7bfc1/image/iacfaba7d247d2f62/version/1612443176/image.png" width="160" class="logoMM">
-<h3 class="h3-about"><b>⚠️ Attention : </b>À la suite d'un changement d'infrastructure du code, le site Maths et Matic Projector est cassé, l'équipe Vapps Line std est mobilisé pour corriger le code dans les meilleurs délais, pour suivre l'évolution de la situation, suivez notre compte <a href="https://twitter.com/Vls_officiel">Twitter</a>
-<br>Merci de votre compréhension
-</h3>
+            <div class="pop-up" id="PU-ABC">
+                <h4 style="color: #FFF;"><b> <i class="bi bi-info-circle-fill"></i> Tous les bugs recensés (à la suite d'un changement d'infrastructure du code) sont désormais corrigés !</b> Si vous remarquez d'autre bugs, n'hésitez pas à nous <a style="color: #FFF;" href=" https://maths-et-matic.jimdofree.com/accueil/contact">contacter</a>
+                <br>Utilisez Maths et Matic Projector sans modération 😀 !
+                <br></h4>
+                <button onclick="HidePUABC()">Fermer</button>
+                <script>
+                    var element = document.getElementById("PU-ABC");
+                        element.style.display = "block";
+                    function HidePUABC(){
+                      var element = document.getElementById("PU-ABC");
+                      element.style.display = "none";
+                    }
+                </script>
+            </div>
             <p>
                 <b>Maths et Matic Projector</b> votre plateforme de calcul mentales en classe
              </p>
