Changement de comportement clé de données

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script src="js/libs/kas.min.js" defer></script>
     <script src="js/MM1toMM2.min.js" defer></script>
     <script src="js/libs/vanilla-picker/vanilla-picker.min.js" defer></script>
-    <script src="js/lib.mathsmentales.js?v=34" type="module" id="mmscriptid"></script>
+    <script src="js/lib.mathsmentales.js?v=35" type="module" id="mmscriptid"></script>
 </head>
 <body>
     <div id="app-container">
@@ -210,7 +210,7 @@
             </select>
             <br>
             <fieldset><legend>Clé de données</legend>
-                <input type="checkbox" id="aleaInURL" value="1" class="switch" title="Prendre en compte dans l'adresse"> inclure
+                <input type="checkbox" id="aleaInURL" value="1" class="switch" title="Prendre en compte dans l'adresse"> Utiliser
                 <input type="text" placeholder="eHDtp" id="aleaKey" size="6">
                 <img src="img/iconfinder_die_32px.png" class="pointer" id="btn-params-aleakey">
             </fieldset>
